--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="manifest" href="manifest.json" />
 <link rel="apple-touch-icon" href="icons/apple-touch-icon.png" />
 
-<link rel="icon" href="icons/logo-192.png" sizes="192x192" />
-<link rel="icon" href="icons/logo-512.png" sizes="512x512" />
+<link rel="icon" href="./icons/logo-192.png" sizes="192x192" />
+<link rel="icon" href="./icons/logo-512.png" sizes="512x512" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -93,7 +93,7 @@
   <!-- Intro / Splash -->
   <div id="splashIntro">
     <div class="splash-card">
-      <img class="splash-logo" src="icons/logo-512.png" width="120" height="120" alt="Logo" />
+      <img class="splash-logo" src="./icons/logo-512.png?v=8" width="120" height="120" alt="Logo" />
       <div class="splash-title">Sueña en grande. Vive con propósito. Crece con TIENS.</div>
       <div class="gold-line"></div>
       <div class="splash-credit">Elaborado por Dream Academy · by Alexis Molina</div>
